@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.2.0 - not released yet
+	* Changed: Removed currencyFormat from core
 	* Added: Balloon info rendering, style and JS
 	* Added: Hooks in TodoyuMail
 	* Added: Empty listing shows "no items" notice
